chore: update documentation for version 1.0.2.6; fix powertool command logic and enhance item interaction handling