@@ -1,35 +1,52 @@
 package com.zerog.neoessentials.items.handlers;
 
 import com.zerog.neoessentials.items.commands.PowertoolCommand;
-import com.zerog.neoessentials.items.commands.PowertoolToggleCommand;
 import com.zerog.neoessentials.util.MessageUtil;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceLocation;
+import net.neoforged.bus.api.ICancellableEvent;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 import java.util.UUID;
 
 /**
  * Handles item interaction events for powertool functionality.
- * When a player right-clicks with an item that has a powertool command assigned,
- * this handler executes the stored command.
+ * Fires on RightClickItem (air), RightClickBlock, and RightClickEmpty
+ * so powertools work regardless of what the player clicks on.
  */
 @EventBusSubscriber(modid = "neoessentials")
 public class ItemInteractionHandler {
     private static final Logger LOGGER = LoggerFactory.getLogger(ItemInteractionHandler.class);
 
-    /**
-     * Handle right-click item events for powertool execution.
-     */
+    /** Right-click in air */
     @SubscribeEvent
-    public static void onItemUse(PlayerInteractEvent.RightClickItem event) {
+    public static void onRightClickItem(PlayerInteractEvent.RightClickItem event) {
+        handlePowertool(event);
+    }
+
+    /** Right-click on a block */
+    @SubscribeEvent
+    public static void onRightClickBlock(PlayerInteractEvent.RightClickBlock event) {
+        handlePowertool(event);
+    }
+
+    /** Right-click on empty (some edge cases) */
+    @SubscribeEvent
+    public static void onRightClickEmpty(PlayerInteractEvent.RightClickEmpty event) {
+        handlePowertool(event);
+    }
+
+    /**
+     * Core powertool handler — checks item type, global toggle, and permission,
+     * then executes the bound command.
+     */
+    private static void handlePowertool(PlayerInteractEvent event) {
         if (!(event.getEntity() instanceof ServerPlayer player)) {
             return;
         }
@@ -37,55 +54,59 @@ public class ItemInteractionHandler {
         try {
             UUID playerUUID = player.getUUID();
 
-            // Check if player has powertool data
+            // Only continue if this player has any powertool bindings
             if (!PowertoolCommand.hasPowertoolData(playerUUID)) {
                 return;
             }
 
-            // Get the item being used
+            // Must be holding an item
             ItemStack heldItem = player.getMainHandItem();
             if (heldItem.isEmpty()) {
                 return;
             }
 
-            // Get item ID
+            // Look up by item TYPE (not slot)
             ResourceLocation itemKey = BuiltInRegistries.ITEM.getKey(heldItem.getItem());
             String itemId = itemKey.toString();
 
-            // Check if this item has a powertool command assigned
             String command = PowertoolCommand.getPowertoolCommand(playerUUID, itemId);
-            if (command == null || command.trim().isEmpty()) {
+            if (command == null || command.isBlank()) {
                 return;
             }
 
-            // Check if powertool is enabled for this item
-            if (!PowertoolToggleCommand.isPowertoolEnabled(playerUUID, itemId)) {
+            // Global per-player toggle
+            if (!PowertoolCommand.isPowertoolEnabled(playerUUID)) {
                 return;
             }
 
-            // Check permission to use powertools
-            if (!com.zerog.neoessentials.api.permissions.PermissionAPI.hasPermission(playerUUID, "neoessentials.item.powertool")) {
+            // Permission check
+            if (!com.zerog.neoessentials.api.permissions.PermissionAPI
+                    .hasPermission(playerUUID, "neoessentials.item.powertool")) {
                 return;
             }
 
-            // Execute the command
-            event.setCanceled(true); // Prevent normal item use
-            
+            // Cancel the vanilla interaction and run the bound command
+            if (event instanceof ICancellableEvent cancellable) {
+                cancellable.setCanceled(true);
+            }
+
+            var server = player.getServer();
+            if (server == null) return;
+
             try {
-                // Execute command as the player
-                player.getServer().getCommands().performPrefixedCommand(
+                server.getCommands().performPrefixedCommand(
                     player.createCommandSourceStack(),
                     command.startsWith("/") ? command.substring(1) : command
                 );
-                
-                LOGGER.debug("Executed powertool command '{}' for player {}", command, player.getName().getString());
+                LOGGER.debug("Executed powertool '{}' for {}", command, player.getName().getString());
             } catch (Exception e) {
-                LOGGER.error("Failed to execute powertool command '{}' for player {}", command, player.getName().getString(), e);
+                LOGGER.error("Failed to execute powertool command '{}' for player {}",
+                    command, player.getName().getString(), e);
                 player.sendSystemMessage(MessageUtil.error("commands.neoessentials.powertool.execution_failed"));
             }
 
         } catch (Exception e) {
-            LOGGER.error("Error in powertool item interaction handler", e);
+            LOGGER.error("Error in powertool interaction handler", e);
         }
     }
 }
